src/css/modules/child-pages.less
.child-pages-wrapper  {
	overflow: hidden;
}
.child-pages {
	margin: -1rem;

    li {
        padding: 1rem;

        a {
            .listItemAnchor;
            position: relative;
            height: 30rem;
            width: 100%;
            display: block;
            text-shadow: 0 1px 1px darken(@blue, 50%);

            &:hover, &:focus {
                .date {
                    color: lighten(@blue, 30%);
                }
            }

            .date {
                padding: 0 2rem;
                margin: 0 0 2rem 0;
                display: block;
                color: @white;
            }
        }
    }
}

@media all and (min-width: (@large_width  + @scroll_bar)) {
	.child-pages ul li a {
		height: 40rem;
	}
}

